--- a/pop-corn/src/index.css
+++ b/pop-corn/src/index.css
@@ -77,6 +77,7 @@ justify-content: center;
   background-color: var(--color-background-500);
   border-radius: 0.9rem;
   position: relative;
+
 }
 
 .movie-card {
@@ -106,4 +107,53 @@ justify-content: center;
   background-color: rgb(191, 184, 184);
   font-weight: 700;
   font-size: 20px;
+}
+
+
+
+.summary {
+  border-radius: 10px;
+  background-color: var(--color-background-100);
+  box-shadow: 1px 1px 10px black;
+  padding: 20px;
+}
+
+.summary h2 {
+  text-transform: uppercase;
+  font-size: 1.6rem;
+  letter-spacing: 1px;
+}
+
+.summary-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 30px;
+}
+
+.watched-movie-card {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-top: 30px;
+  margin-left: 20px;
+
+}
+
+.watched-movie-card img {
+  height: 100px;
+  margin-right: 20px;
+}
+
+.summary-info {
+  display: flex;
+  justify-content: space-around;
+
+
+}
+
+.summary-info p {
+  margin-right: 30px;
+  margin-top: 20px;
+ 
 }
