--- a/pop-corn/src/index.css
+++ b/pop-corn/src/index.css
@@ -16,7 +16,8 @@
 }
 
 body {
-  background-color: var(--color-background-900);
+  /* background-color: var(--color-background-900); */
+ 
 }
 
 .nav-bar {
