--- a/pop-corn/src/index.css
+++ b/pop-corn/src/index.css
@@ -8,11 +8,14 @@
   --color-background-900 : #212539 ;
   --color-red : #fa5252 ; 
   --color-red-dark : #e03131 ;
+ 
 }
 
 * {
   margin: 0px;
   padding: 0px;
+  font-size: 8px;
+
 }
 
 body {
