--- a/pop-corn/src/App.css
+++ b/pop-corn/src/App.css
@@ -1,38 +1,75 @@
-.App {
-  text-align: center;
+.container {
+
+  width: 40%;
+  padding: 10px;
+  margin: 100px auto;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.tab {
+  border-radius: 20px;
+  background-color: #edf2ff;
+  padding: 12px 24px;
+  margin-right: 8px;
+  font-size: 16px;
+  font-weight: bold;
+  color: #364fc7;
+  cursor: pointer;
+  border: transparent;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.active {
+    border-radius: 20px;
+  padding: 12px 24px;
+  margin-right: 8px;
+  font-size: 16px;
+  font-weight: bold;
+  background-color: #364fc7;
   color: white;
+    cursor: pointer;
+  border: transparent;
 }
 
-.App-link {
-  color: #61dafb;
+.tab-content{
+
+  background-color: #edf2ff;
+  margin-top: 20px;
+  min-height: 200px;
+  padding: 20px;
+  border-radius: 8px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.tab-content h4 {
+  font-size: 20px;
+  margin-bottom: 16px;
+  color: #364fc7;
+}
+.tab-content p {
+  font-size: 18px;
+}
+
+.details-btn {
+  margin-top: 20px;
+  border: transparent;
+  color: #364fc7;
+  font-weight: 600;
+  text-transform: capitalize;
+  text-decoration: underline;
+  cursor: pointer;
+
+}
+
+.tab-actions{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.hearts-container button {
+  margin: 0px 5px;
+  border: transparent;
+  background-color: rgb(241, 91, 91);
+  border-radius: 2px;
+  color: white;
+
 }
