--- a/pop-corn/src/index.css
+++ b/pop-corn/src/index.css
@@ -89,6 +89,13 @@ justify-content: center;
   flex-direction: row;
   align-items: center;
   border-bottom: 1px solid var(--color-background-100);
+  cursor: pointer;
+  transition: 1s;
+}
+
+.movie-card:hover {
+  background-color: var(--color-background-100);
+
 }
 
 .movie-card img {
