--- a/pop-corn/src/index.css
+++ b/pop-corn/src/index.css
@@ -176,3 +176,44 @@ justify-content: center;
   font-size: 30px;
   font-weight: 600;
 }
+
+
+
+/* ////// movie details ::  */
+
+.details img {
+  height: 240px;
+}
+
+header {
+  background-color: var(--color-background-100);
+  display: flex;
+  flex-direction: row;
+  margin-top: 30px;
+}
+
+
+.header-movie-info {
+
+  padding: 20px;
+}
+
+.btn-back{
+  padding: 5px;
+  font-size: 15px;
+  cursor: pointer;
+}
+
+.footer-movie-info {
+margin-top: 65px;
+}
+
+.rating {
+  
+  width: 70%;
+   margin: 20px auto;
+  background-color: var(--color-background-100);
+  border-radius: 10px;
+  padding: 15px;
+  text-align: center;
+}
