--- a/pop-corn/src/index.css
+++ b/pop-corn/src/index.css
@@ -199,9 +199,15 @@ header {
 }
 
 .btn-back{
-  padding: 5px;
-  font-size: 15px;
+
+
   cursor: pointer;
+    height: 1.7rem;
+
+
+
+  font-size: 30px;
+ 
 }
 
 .footer-movie-info {
@@ -216,4 +222,15 @@ margin-top: 65px;
   border-radius: 10px;
   padding: 15px;
   text-align: center;
+}
+
+.rating button {
+  width: 70%;
+  padding: 10px;
+  border-radius: 10px;
+  border: transparent;
+  background-color: var(--color-primary);
+  color: var(--color-text);
+  margin-top: 10px;
+  cursor: pointer;
 }
